Ensure that multiselect inputs are scrollable on X overflow

--- a/admin_ui/static/scss/admin.scss
+++ b/admin_ui/static/scss/admin.scss
@@ -18,6 +18,10 @@
 }
 
 
+select.selectmultiple {
+  overflow-x: auto;
+}
+
 dt {
   font-size: 80%;
   text-transform: uppercase;
